--- a/src/markdown/english/1. Introduction.md
+++ b/src/markdown/english/1. Introduction.md
@@ -1,18 +1,18 @@
 Your greatest superpower is the ability to change yourself.
 
-This book is not for the unserious. This book is for those that genuinely want to grow, find peace, and find freedom from the porn trap. For those interested in quick "productivity tips" or numbered principles, these will not be found in this book. Instead, this book will provide you with understandings you can use to make your own decisions.
+This book is not for the unserious. This book is for those that genuinely want to grow, find peace, and find freedom from porn. For those interested in quick "productivity tips" or numbered principles, these will not be found in this book. Instead, this book will provide you with understandings you can use to make your own decisions.
 
-Many people think that all they need to do to quit porn is to...stop doing it. They say, "just stop watching it. Don’t open the window. Don’t watch porn. Distract yourself." But porn is not a choice. Consider this: Did you ever make the ‘positive’ choice that you must have porn to masturbate? Or that you should/must/need porn-induced fantasies to spice up sex with your partner? Or, that at certain times in your life, you couldn’t enjoy a good night’s sleep or perhaps even pass an evening after a hard day at work without surfing for porn? Or that you couldn’t concentrate or handle stress without it? At what stage did you decide that you needed porn, that you needed it permanently in your life, feeling insecure, even panic-stricken without porn, without your online harem? The fact is, we never wanted this.
+Many people think that all they need to do to quit porn is to...stop doing it. They say, "just stop watching it. Don’t open the window. Don’t watch porn. Distract yourself." But consider this: Did you ever make the ‘positive’ choice that you must have porn to masturbate? Or that you need porn-induced fantasies to spice up sex with your partner? Or, that at certain times in your life, you couldn’t enjoy a good night’s sleep or perhaps even pass an evening after a hard day at work without surfing for porn? Or that you couldn’t concentrate or handle stress without it? At what stage did you decide that you needed porn, that you needed it permanently in your life, feeling insecure, even panic-stricken without porn, without your online harem? The fact is, we never thought over these things when we found it.
 
-Scrap the idea of "methods", "guides" and "how-to's". How-to's don't work except for extreme basics. If success were prescriptive, then everybody would be a success. There are many who obsessively browse "nofap" material only continuing in the hope that they could one day become successful. If your desire has become dependent, like you are hysterically driven to obtain something whatever the cost, then somewhere deep down inside you do not believe that you can achieve it.
+Scrap the idea of "methods", "guides" and "how-to's". If success were prescriptive, then everybody would be a success. There are many who obsessively browse "nofap" material only continuing in the hope that they could one day become successful. If your desire has become dependent, like you are hysterically driven to obtain something whatever the cost, then somewhere deep down inside you do not believe that you can achieve it.
 
-Most likely, those who have already been doing "nofap" or semen retention practices, are likely familiar with failure.
+Most likely, those who have already been doing "nofap" or semen retention practices, are already familiar with failure.
 
 "nofap" practitioners are used to saying “If I became free from porn, it would be great”, “It would be terrible if I could not be free”; and so on. Once you become dependent on the object of your desire you are drawn into such a violent whirlpool that you will exhaust yourself in the struggle. There is no reason to create this unneeded pressure.
 
-Understand failure is not falling down. Failure is never having reached the goal, ever. And the reason that that happens is that a human being is always looking for something to do because he has been conditioned by the concept and by the notion that there is something that if he does correctly, it will lead him to success.
+Understand failure is not falling down. Failure is never having reached the goal, ever. And the reason that this happens is that a human being is always looking for something to do because he has been conditioned by the concept and by the notion that there is something that if he does correctly, it will lead him to success.
 
-Instead, one must understand and address their flawed beliefs and addiction to truly create momentum. One must come to terms with truth, because truth is the only thing that can lead to freedom. No guide, no listed steps, none of these things can create deep, meaningful, and lasting understandings that will have positive effects on your life. Only you discovering truth, yourself, can do this.
+Instead, one must individually understand and address their flawed beliefs and negative patterns to truly create momentum. One must come to terms with truth, because truth is the only thing that can lead to freedom. No guide, no listed steps, none of these things can create deep, meaningful, and lasting understandings that will have positive effects on your life. Only you discovering truth, yourself, can do this.
 
 Truth-seeking essentially means that you have to understand, with deep conviction, things that you’ve been programmed to misunderstand. You have to have enough humility and sincerity to be able to replace old ideas with the new, however painful they may seem.
 
@@ -37,11 +37,13 @@ One thing that must be done, however, is you must put down your ego while readin
 
 One of the things Krishnamurti (philosopher) talks about is being in an internal state of revolution. You should always be internally ready for a complete change. Whenever we say we’re going to *try* to do something or *try* to form a habit, we’re wimping out.
 
-**Do not skip chapters. Every chapter is important for your learning.**
+**PS: Do not skip chapters. Every chapter is important.**
 
 I also would like you to approach this book with the aim to gain new insight and understanding, rather than trying to *believe your problems away*. Evidence shows that you must truly understand the reality of habits/addictions to change your decision-making, and blind belief does not help that.
 
-I may use the terms good/bad in this book, but when I use those terms I actually mean "leading to freedom" or "leading to delusion". We have applied the labels good and bad to basically everything, but I want you to step back and digest things for what they really are - without preconceptions blinding your view.
+This is also not a copy of easypeasy / rewrite of any other book that has previously come out. It is not a guide, or how-to, or method. It is merely a book which contains text that one can use to think over things. I do not want you following my instructions on how to live a good life. One must find things for themselves.
+
+I may use the terms good/bad in this book, but when I use those terms I really mean "leading to freedom"/"leading to delusion". We have applied the labels good and bad to basically everything, but I want you to step back and digest things for what they really are - without preconceptions blinding your view.
 
 Have fun reading!
 
