--- a/src/markdown/english/10. Movement.md
+++ b/src/markdown/english/10. Movement.md
@@ -1,24 +1,31 @@
-"mentor-itis" & what next
+Something I wanted to write about; if you fail to transmute your sexual energy builds up, you will almost be forced to phyiscally release, otherwise it could actually be unproductive. The key with this is to understand that you have not failed anything. The delusion that you can be without beating your meat or having sex ever again is delusional. The point of everything here is for someone who wants to be productive and who wants clarity - so if too much sexual energy builds up to where it is unproductive, it is alright to masturbate without porn. After this however, your energy levels will be lower. So take an overview of your different methods of transmutation and see if you are doing enough. Transmutation is a constant process - and it is much more valuable than you think.
 
-You can't help people while drowning. ((many attempt to because they avoid themselves))
+## The Individuality of Truth
 
-Most people have a natural tendency to romanticize the past - to remember the good things they experienced and forget about the bad things. Just think about how people sometimes recount the "glory days" of their youth, or how older adults may sometimes comment that things were better "in their day." In psychological terms, this is known as memory bias, and a person may be more likely to exhibit it when their present life circumstances are difficult or unfavorable.
+When we create new understandings, some part of us wants to immediately spread this message, this understanding, directly to others. The reality is that you cannot make someone directly understand something. You can make them believe something, but then it denies their own intelligence and their own processing abilities, and it will be a waste of time. The questions needed are the ones not asked. And these questions only arise when a person can freely discover something - truly finding what is true by not having a desire for a certain outcome, but by finding things through clarity.
 
+You can't help people while drowning. A lot of people who find freedom from destructive activies want to help others too, however, this is a way they avoid themselves. It is a method of procrastination, a delay of the painful realisation that you were wrong about ideas you held on to. It is an escape from the self. If you want to help others, you should focus on yourself. While it sounds counterintuative, if you think on this you will see its legitimacy.
 
-Some good advice is to find three hobbies: One that makes you money, one that keeps you fit, and one that makes you creative/helps expression.
+Revelation is the result of internal revolution. And this is only possible through humility - and most block out this humility in fear that they are wrong. We are social creatures, and we want to be correct and relevant for others and ourselves. When we find out we may be wrong, our default selves would defend an untruth rather than find what is true, due to the pain of realizing something you believe is not true. You can see this through people that believe in certain things. Maybe way of life, religion, lifestyle, etc. Without humility, you can end up anywhere. For one who wants to advance and make actual progress without staying in the same place, they must be ready for internal revolution.
 
-...
+The reason I have mentioned many times within this material that *you* must find these understandings for yourself is because otherwise, you could believe in false ideas as easily as you could believe in truth. I do not want to take your freedom away from you - and the reality is that most self-improvement ideas are around restriction. The free mind is free of restriction - but it understands what is beneficial and does that with a fire-fueled focus. This understanding is a result of humility.
+
+Most people have a natural tendency to romanticize the past - to remember the good things they experienced and forget about the bad things. Just think about how people sometimes recount the "glory days" of their youth, or how older adults may sometimes comment that things were better "in their day." In psychological terms, this is known as memory bias, and a person may be more likely to exhibit it when their present life circumstances are difficult or unfavorable. Just because you may be going through tough situations, breakups, or whatever it may be, porn is no saving grace. In fact, it will make it harder to deal with these situations.
+
+A part of your brain, the basal ganglia, is your autopilot. It does things without you thinking about it, like navigating routes you frequently walk or drive. If porn usage is a daily activity for you, you may automatically prepare yourself to use porn without consciously noticing. It can become so engrained that it almost feels natural - even though it is completely the opposite. The solution for this is to change your environment to where it is not a thing you would do or prepare automatically. Give your mind space where you previously filled boredom with porn, by changing your immediate environment.
+
+Now we are at the end of the book. I could get you to make some promise to yourself. To practice some affirmation. To talk out loud or something. However, I will not do this. I will not even direct you to stop watching porn - or to transmute your energy through semen retention. The freedom you have is that you can do whatever you want to do . You can live a life chasing instant pleasures or you can live a meaningful and sincere one.
+
+When deep understandings are made, changes happen almost automatically. The focus now should be on meaningful action.
 
 There’s no single permanent solution to happiness. Rather, achieving happiness requires a process of understanding and self-discovery. It is a process of training yourself to see certain truths.
 
-A part of your brain, the basal ganglia, is your autopilot. It does things without you thinking about it, like navigating routes you frequently walk or drive. It frees up the rest of your brain to think about other things. ((Refer to this in reasoning for 15day thing))
+## Ending Note
 
-<div style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;"><img alt="-------------" src="https://burgeon-alpha.vercel.app/md_images/divider_1.png" height="100px"></div>
+Many of you may be thankful for this book. You may want to show appreciation, but you have done everything for yourself. If you want to do something positive, purchase a physical copy for a friend you think may benefit from it, and give opportunity to those who you see in a bad place. Thank you for reading! <3
 
-Many of you may be thankful for this book. You may want to show appreciation but I am not an idol. In the scheme of things, I know nothing, and can grow so much more. And so can you. If you want to thank me, purchase a physical copy for a friend you think may benefit from it, and give opportunity to those who you see in a bad place. Thank you for reading! <3
+By the way, please do not call this book a "guide" or "method" when talking about it, because that infers I am directing you to do or be something. I designed this for one to find freedom within themselves - which is the only way. With that said, I love and respect every one of you that reads this book.
 
-By the way, please do not call this book a "guide" or "method" when talking about it, it makes me cringe.
-
-Burgeon meaning: to grow.
+Burgeon meaning: to Grow.
 
 Designed 2021-2023
