--- a/src/markdown/english/2. Stray Cat.md
+++ b/src/markdown/english/2. Stray Cat.md
@@ -18,17 +18,17 @@ Negative effects span from low energy, low motivation, lessened ability to do wo
 
 **People believe "nofap" provides benefits, but it is really the negatives of PMO itself being absent.**
 
-These negative effects are not anecdotal and do not happen to a minority group. Instead, all people that do PMO suffer some degree of these symptoms, no matter if they realize it. Like the analogy of the 'boiling frog', if a change occurs slowly and we do not know it, we are unlikely to notice. Many problems in our personal lives could be directly or indirectly related to PMO, yet we may be none the wiser. However, there is not much point in proving these negative effects (over again), as **the neurochemical effects of porn are scientifically and anecdotally well understood**. Just ask any ex-user that has been entirely freed from porn and masturbation. Unless they thought they would gain superpowers using nofap, the user would likely explain the positive changes they experienced after leaving.
+These negative effects are not anecdotal and do not happen to a minority group. Instead, all people that do PMO suffer some degree of these symptoms, no matter if they realize it. Like the analogy of the 'boiling frog', if a change occurs slowly and we do not know it, we are unlikely to notice. Many problems in our personal lives could be directly or indirectly related to PMO, yet we may be none the wiser. However, there is not much point in proving these negative effects (over again), as **the neurochemical effects of porn are scientifically and anecdotally well understood**. Just ask any ex-user that has been entirely freed from porn and masturbation. Unless they thought they would gain superpowers using nofap, the user will explain the positive changes they experienced after leaving.
 
-So, let's return to the idea that we might have discovered nofap through a YouTube video. Hundreds of YouTubers have made videos on quitting porn and masturbation, with thousands of videos advising about quitting. However, there lies a sad truth - most advice given by these 'self-development' YouTubers/mentors has a meager success rate.
+So, let's return to the idea that we might have discovered nofap through a YouTube video. Hundreds of YouTubers have made videos on quitting porn and masturbation, with thousands of videos advising about quitting. However, there lies a sad truth - most advice given by these 'self-development' YouTubers / mentors has a meager success rate.
 
-This is because people approach leaving PMO with a need for motivation. Some things can be broken with motivation, but habits/addictions cannot. Many "influencers" also use motivation as the primary cause for doing nofap. **Motivation is temporary**.
+This is because people approach leaving PMO with a need for motivation. Some things can be broken with motivation, but habits/addictions cannot. Many "influencers" also use motivation as the primary cause for doing 'nofap'. **Motivation is temporary**.
 
 To me, the mind should be a servant and a tool, not a master. The monkey mind should not control and drive you 24/7. Personally, I’m not going to be the most successful person on the planet, nor do I want to be. I just want to be the most successful version of myself while working the least hard possible. And with energy sinks like porn and masturbation in life, it will hinder these kinds of aspirations and your journey of growth.
 
 ## False Incentives
 
-Be aware not to base your reasoning for quitting on any false incentives. Some of us may want to quit to appease our friends, make our partners happier, be better than people we view as "degenerate" or become more disciplined. Even though these are great ways to discover nofap, these incentives create the perfect excuse for us to relapse when we are experiencing negative emotions.
+Be aware not to base your reasoning for quitting on any false incentives. Some of us may want to quit to appease our friends, make our partners happier, be better than people we view as "degenerate" or become more disciplined. Even though these are great ways to discover semen retention / 'no-porn', these incentives create the perfect excuse for us to relapse when we are experiencing negative emotions.
 
 - "I don't care what my friend thinks; it is not a big deal anyway."
 - "She is already happy. It really is not that bad."
@@ -42,4 +42,4 @@ Forget the initial incentive for being interested or wanting to quit. Freedom mu
 
 Everyone is caught up in suffering and conflict, but most people are unconscious of that conflict; they are merely seeking substitutions, solutions, and escapes. Whereas if they cease seeking escapes and begin to question the environment that causes that conflict, then the mind becomes acute, alive, and intelligent.
 
-Do not quit for anybody else. Quit for yourself.
+Therefore, do not quit for anybody else. Quit for yourself.
