--- a/src/markdown/english/3. Effects.md
+++ b/src/markdown/english/3. Effects.md
@@ -2,9 +2,9 @@ Leaving PMO provides many benefits and positives, as detailed in the introductio
 
 Imagine someone said they wore shoes all day that were too tight, just so they could experience pleasure when they took them off in the evening. Do you think that makes sense? Of course not. You wouldn’t say that tight shoes provide pleasure. But as soon as a porn user finishes a PMO session, their dopamine levels crash lower than a non-user. They feel irritable, similar to if they were wearing tight shoes. Chemicals also flood the brain causing lethargic effects (but not relaxing because of the dopamine drop after orgasm).
 
-Thus, the porn trap is similar to wearing tight shoes just to obtain the pleasure of taking them off and doing this over and over again.
+Thus, the porn trap is similar to wearing tight shoes just to obtain the "pleasure" of taking them off and doing this over and over again.
 
-Porn users — just like drug users — are constantly trying to get back to the same level of happiness and relaxation that non-users experience in everyday life. However, you don't notice this. It has happened so slowly, so gradually, that like the "boiling frog", you did not notice.
+Porn users — just like drug users — are constantly trying to get back to the same level of happiness and relaxation that non-users experience in everyday life. However, you don't notice this. It has happened so slowly, so gradually, that like the "boiling frog" analogy, you did not notice.
 
 Do not make the mistake of normalizing porn. Because people have used it for so long, they find it hard to relate to when they didn't, and most used language to suggest benefits or that leaving PMO is not the normal. While in a societal sense, it may be the 'norm', in a bodily sense, it is not natural. Naturally, nobody has urges to watch lewd video clips as a reaction to emotion. Nobody tries to escape negative emotions by tricking our bodies into connections to partners we will never know. Porn is not natural and never will be. It is a man-made trap. Masturbation too has been around for a while, but on its own, it still drains your energy and is just another outlet for hypersexualization.
 
@@ -16,7 +16,7 @@ Contrary to popular belief, dopamine's main effect is not pleasure. Dopamine's p
 
 Dysfunctions in the dopaminergic system result in unhealthy changes in anticipation and it causes immeasurable effects on a person's life.
 
-<div title="Dopamine Diagram" style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;filter:contrast(100%)"><img alt="Image of dopamine structure (not found)" src="https://burgeon-alpha.vercel.app/md_images/dopamine.png" height="250px"></div>
+<div title="Dopamine Diagram" style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;filter:contrast(100%)"><img alt="Image of dopamine structure (not found)" src="https://burgeonbook.org/md_images/dopamine.png" height="250px"></div>
 
 What happens with porn is the dopamine system becomes downregulated. When we are with a single partner, the body limits the amount of dopamine that can be created. Porn, however, releases more and more dopamine when you seek and search through multiple partners for "just the right video".
 
@@ -30,7 +30,7 @@ You may think that a huge amount of dopamine would make you feel better, but tha
 
 To compensate for the unnaturally high amount of dopamine that has entered your body, your dopamine system gets **downregulated**.
 
-<div title="Downregulation Process" style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;"><img alt="Image of downregulation process (not found)" src="https://burgeon-alpha.vercel.app/md_images/downregulation.jpeg" height="250px"></div>
+<div title="Downregulation Process" style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;"><img alt="Image of downregulation process (not found)" src="https://burgeonbook.org/md_images/downregulation.jpeg" height="250px"></div>
 
 You may think that the body makes everything fine again, but this is ignoring the side effects of this downregulation. First of all, the body builds a dependence upon porn as it becomes further downregulated every consecutive viewing, and nothing else will give that same level of dopamine it needs to feel "normal".
 
@@ -38,15 +38,15 @@ The second and worst effect of this downregulation is that things that provide l
 
 One of the most prevalent problems that porn creates is anxiety. The misdirection of sexual energy also causes a lack of confidence, and testosterone is lowered indirectly through self-neglect (part of dopamine desensitization). It also makes you less incentivized to be social (through less of a dopamine reward), which in turn amounts to anxiety.
 
-You may make fun of these people who go into a state of disarray ("coomers") but it is a sad story. Tiktok, video games, and procrastination all become more attractive when the dopaminergic system becomes downregulated. Life becomes more hedonistic, and the lack of growth eventually brings pain.
+Some make fun of these people who go into a state of disarray ('coomers') but it is a sad story. Tiktok, video games, and procrastination all become more attractive when the dopaminergic system becomes downregulated. Life becomes more hedonistic, and the lack of growth eventually brings pain.
 
 The good thing is that the damage to the dopamine receptors is not permanent. You have the ability to upregulate your dopamine receptors after this damage by stopping porn use and other overstimuli. Your greatest superpower is the ability to change yourself.
 
-<div title="Some Brain" style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;"><img alt="Image of a brain (not found)" src="https://burgeon-alpha.vercel.app/md_images/brain_color.png" height="250px"></div>
+<div title="Some Brain" style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;"><img alt="Image of a brain (not found)" src="https://burgeonbook.org/md_images/brain_color.png" height="250px"></div>
 
 Increased brain fog is another effect that porn creates. Porn lowers brain chemicals (acetylcholine) vital in cognitive functioning. This can make active users feel like they are less able to function actively than before (however, not many people realize it because this happens slowly). Porn also has been studied to decrease gray matter in the brain.
 
-Dopamine is the reason that motivation does not work for becoming free from porn (and addictions in general). Dopamine is a large part of motivation itself. And if the anticipation of porn outweighs the anticipation of quitting, then you will relapse. Then what works? Understanding of truth. Deep understandings, that are not beliefs, that bring reality to the light: this is what works.
+Dopamine is the reason that motivation does not work for becoming free from porn (and addictions in general). Dopamine is a large part of motivation itself. And if the anticipation of porn outweighs the anticipation of quitting, then you will relapse. Then what works? Understanding of truth. Deep understandings, that are not beliefs, that bring reality to the light - this is what works.
 
 Porn use also can contribute to Dopamine Deficient Depression (DDD), as the low dopamine periods without porn are not at the levels they are meant to be. This can cause low energy, drowsiness, the inability to feel enthusiastic about anything, lowered motivation, and excessive sleep.
 
@@ -58,7 +58,7 @@ This is because your brain does not care about negatives when it is in a reactio
 
 ## MO & Endorphins
 
-Sex is not MO (Masturbation & Orgasm) but semen release still has the same effects for both of them. However, MO is void of love and meaning; it is wasting energy for little purpose.
+Sex is not the same as MO (Masturbation & Orgasm) but semen release still has the same effects for both of them. However, MO is void of love and meaning; it is wasting energy for little purpose.
 
 When the body releases sperm, it expends significant amounts of Vitamin A, ABSORBIC ACID, Vitamin B, RIBOFLAVIN, NIACIN, PANTOTHENIC ACID, PYRIDOXINE, COBALAMIN, BIOTIN, CHOLINE, CALCIFEROL, ALPHA-TOCOPHEROL, FOLIC ACID, PHYLLOQUINONE, MENADIONE, CALCIUM, CHLORIDE, CHROMIUM, CHROMIUM, COPPER, IODINE, IRON, MAGNESIUM, MANGANESE, MOLYBDENUM, PHOSPHORUS, POTASSIUM, SELENIUM, SODIUM, SULFUR, ZINC, and other nutrients.
 
@@ -70,13 +70,13 @@ People call masturbation "self-love" but really it is self-sabotage. When sexual
 
 I have talked about dopamine being mostly an anticipation chemical. This is true, as it is released before an orgasm during the seek-and-search of online "partners". So what is the effect we believe to be pleasure after an orgasm? This is not caused by dopamine, but by endorphins (bodily-produced opioids).
 
-<div title="Endorphin Diagram" style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;"><img alt="Image of endorphin structure" src="https://burgeon-alpha.vercel.app/md_images/endorphin.png" height="250px"></div>
+<div title="Endorphin Diagram" style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;"><img alt="Image of endorphin structure" src="https://burgeonbook.org/md_images/endorphin.png" height="250px"></div>
 
 On orgasm, endorphins are released. However, at the same time, the dopamine that was elevated in the build-up crashes down.
 
 The orgasm doesn’t relax you, it drains your energy. As soon as you finish, you’re in the comedown/crashing state (feeling crappy) and are more likely to get irritated and impatient with other people. Real relaxation is a feeling of peace and balance, and it would restore your energy. When you are truly relaxed and confident, it makes you more creatively productive. However, porn cannot help with relaxation - only freedom is relaxing. Porn users - just like all other drug users - are constantly trying to get back to the same level of happiness and relaxation that non-users experience in everyday life.
 
-*If you remove dopamine from a human*, even if you give them heroin, it will not be addictive. Opioids are not what makes you want to do something, and if dopamine did not exist, they would not make you addicted.
+*If you remove all dopamine from a human*, even if you give them heroin, it will not be addictive. Opioids (Endorphins) are not what makes you want to do something, and if dopamine did not exist, they would not make you addicted.
 
 **You do not use porn for the orgasm, but for the dopamine released before the orgasm happens.**
 
