--- a/src/markdown/english/4. Brainwashing.md
+++ b/src/markdown/english/4. Brainwashing.md
@@ -12,7 +12,7 @@ One aspect of brainwashing is stress. Porn has subconsciously registered in bill
 
 Porn creates stress by overstimulating your dopamine receptors. Users illude themselves into believing that it is required for relieving stress, even though before they became users, they had no need. And to 'relieve' the pressure, they use it again.
 
-Our brain builds a response to emotions that trigger 'pangs'. These emotions are fear, anxiety, and boredom. Fear (in a user's life) typically comes from everyday events that happen in life, such as fear of getting laid off, fear of failure, or having a bad day. In these cases, porn is imagined as a "savior" at the end of the day that will make everything better - even though it will make everything harder to cope with.
+Our brain builds a response to emotions that trigger 'pangs'. These emotions are fear, anxiety, and boredom. Fear (in a user's life) typically comes from everyday events that happen in life, such as fear of getting laid off, fear of failure, or having a bad day. In these cases, porn is imagined as a savior at the end of the day that will make everything better - even though it will make everything harder to cope with.
 
 Anxiety and uncertainty are also emotions where a similar response happens. In response to not being able to work out how something will play out, this plagues our minds with negative thoughts. Pangs can occur in these moments because porn is interpreted as something that fixes negative emotions. Instead, it creates these negative emotions, worsening over time.
 
@@ -26,8 +26,7 @@ Porn is actually relatively easy to quit when you understand its true nature. Th
 
 Choice is our greatest power in life. Once you realize you have this power, you are like an eagle who grew up thinking he was a chicken, living with other chickens — but one day learned he could fly.
 
-((expanded deets on brainwashing...))
-
+We deny our own intelligence through limiting ideas and beliefs. One of these is the disregard for our own ability, our own power. However, this is in our control.
 
 Imagine your limbic brain (monkey brain) is a dumb electrical appliance. If you unplug 99 out of 100 power cords (false reasons to use porn), it doesn’t know you did that, all it knows is it still has power. You have to unplug every cord, every reason. Then, you will find peace like you’ve never known.
 
@@ -35,17 +34,18 @@ Be careful of your own negativity. Pessimism is self-fulfilling. If you say you 
 
 Peace comes from truth; but how can you find truth? One of the ways in which I know that I am finding the truth of something is that the problem is solved for good.
 
-Examples of what users say:
+Examples of what coping users say:
 
 - "Porn is freedom": This is a lie. Any freedom that leads to craving is not freedom.
 
-- "I can quit anytime you want, I just don't want to quit right now.": Then when will you ever quit? How much longer do you have to lie to yourself thinking there is a benefit to porn?
+- "I can quit anytime I want, I just don't want to quit right now": Then when will you ever quit? How much longer do you have to lie to yourself thinking there is a benefit to porn?
 
 Someone repeating these mantras to themselves is a form of subconscious rationalization used to justify their biological addiction.
 
-In reality, the key to the mental prison or porn is in your own mind. You can not ask another person for this key - one must find it for themselves. The answers lie within yourself. Yet we have been told to look everywhere but ourselves for answers.
+In reality, the key to the mental prison of porn is in your own mind. You can not ask another person for this key - one must find it for themselves. The answers lie within yourself. Yet we have been told to look everywhere but ourselves for answers.
 
 ## Brainwashing Through Bad Advice
+
 Unfortunately, the world is filled with bad advice. So much in fact, that it makes sense for the majority to not be successful in what they truly want to achieve. The individual has to filter out the effective information from the ineffective information. It takes effort, but it is a liberating process that provides one with the steering wheel of life. However, most have been conditioned to hand over the reins to "professionals" who seemingly know everything. This opens the gates for shallow advice, con artists, and wasting time.
 
 The trouble with advice that does not work - is that those that preach it - pronounce their advice as given fact. For one who wants to truly understand the scope of their addiction and how recovery works, if they do not unlearn these false understandings and unproductive ways of thinking then they will be forever held to them.
@@ -56,15 +56,15 @@ There are many unproductive activities that people "*trying*" to leave porn and 
 
 People have this idea of "one step at a time" where they want to take each day at a time after quitting porn. However, this comes with the notion that something bad is happening. Like something is being lost from your life. Would you "take one day at a time" after you became free from a prison? No! Because you would no longer be trapped. Nothing changes physically, but just these changes in ideology make it so a person who wants to find freedom treats it like the opposite - like a prison.
 
-Another way this attachment to porn can appear is through doing a certain amount of days, such as 7, 14, or 30 days of no PMO/MO. I do not understand it. Why return to something that has no benefit in your life? Why view this glimpse of freedom to dunk your head back in under the water? These people still believe it has some value in their lives. And it might if they see a benefit in instant 'pleasures'. But if you do not see a benefit in "instant pleasures" there is nothing in porn that you desire.
+Another way this attachment to porn can appear is through doing a certain amount of days, such as 7, 14, or 30 days of no PMO/MO. I do not understand it. Why return to something that has no benefit in your life? Why view this glimpse of freedom to dunk your head back in under the water? These people still believe it has some value in their lives. And it might if they see a benefit in instant 'pleasures'. But if you do not see a benefit in instant pleasures there is nothing in porn that you desire.
 
-Another flawed ideology is "weening". Weening is the process of spreading usage apart over time or lowering the "severity" of a bad habit. This is typically used for drug addictions, where the body has a physical withdrawal and negative reaction from the absence of a specific drug. However, porn does not have any physical withdrawal. Therefore, "weening" would only make sense if it worked for any mental withdrawal. The thing is, in the time between sessions, a person will start to fantasize about their next usage; they will build up dopamine and anticipation for it. In a sense, this can be even worse than not "weening" because of this even higher amount of anticipation. You do not need to ween something when you can find freedom in an instant.
+Another flawed ideology is "weening". Weening is the process of spreading usage apart over time or lowering the severity of a bad habit. This is typically used for drug addictions, where the body has a physical withdrawal and negative reaction from the absence of a specific drug. However, porn does not have any physical withdrawal. Therefore, weening would only make sense if it worked for any mental withdrawal. The thing is, in the time between sessions, a person will start to fantasize about their next usage; they will build up dopamine and anticipation for it. In a sense, this can be even worse than not weening because of this even higher amount of anticipation. You do not need to ween something when you can find freedom in the present moment.
 
 The last major flawed ideology I will write about is "monsters". You may have heard the terms "little monster" and "big monster" to describe different parts of the human psyche. These are attempts at trying to simplify the dynamic of the human mind, however, it fails at doing this. It creates a Me vs Them scenario. You create this imaginary enemy (this "monster"/primitive brain) and you imagine yourself fighting this figure. The reality is, no big or little "monster" exist. Your "primitive brain" is not out to get you. It is an integral part of your system. One that is there to help you, not to hinder you. And you may say, this is wrong, that it takes away control from your life. And this may be true. But this occurs when you have a cognitive dissonance - when you are trying to force a belief/truth that you do not understand or that you have not figured out yourself.
 
 **Your primitive mind will not ignore a solved, understood truth, but it will ignore a belief**. And some may say there is no difference, but this is false. Truth is digested and critiqued, found by the individual. While belief is easily unfounded, based on little substance, and often external. This is the difference.
 
-You can't force understanding of truth when you have an expectation of what it is - you must be open to whatever result is there when you find the answer. For example, if porn turned out to be beneficial for someone who wants a productive life, it would be intelligent to use it. Or if it turned out to be unproductive, you should not, and find freedom. With this in mind, you can use your deductive capabilities to quantify truth; when you have humility and sincerity of course.
+You can't force understanding of truth when you have an expectation of what it is - you must be open to whatever result is there when you find the answer. For example, if porn turned out to be beneficial for someone who wants a productive life, it would be intelligent to use it. Or if it turned out to be unproductive, you should not, and find freedom. With this in mind, you can use your deductive capabilities to quantify truth; and only when you have humility and sincerity.
 
 So it is not productive to hate parts of your own mind, and the system that makes up your being. Self-hatred has no benefit or purpose. There is no invisible enemy that is out to get you every day, to force you into bad habits. It is just your brain making the most logical conclusions and actions based on your understanding of what truth is.
 
