--- a/src/markdown/english/5. Love.md
+++ b/src/markdown/english/5. Love.md
@@ -6,7 +6,7 @@ When sex is natural and normal it is a game played according to rules that you m
 
 Fixating on the naked, sexual parts of women dulls your ability to appreciate the beauty of their smile, or their eyes lighting up when they talk or laugh. After quitting porn, you will be amazed at how beautiful real, everyday women are.
 
-The skewed image porn creates (that society accepts) skews the vision of what a healthy relationship looks like. It makes it difficult for people to find meaningful partners (because they are looking for perfection) and when they do find partners, they want them for pleasure, not for connection. Such a shallow desire is just another craving for pleasure
+The skewed image porn creates (that society accepts) skews the vision of what a healthy relationship looks like. It makes it difficult for people to find meaningful partners (because they are looking for perfection) and when they do find partners, they want them for pleasure, not for connection. Such a shallow desire is just another craving for pleasure.
 
 A lot of external battles happen because your internal state is not good. When you’re naturally internally peaceful you’re going to pick fewer fights. You’re going to be more loving without expecting anything in return. That will take care of things on the external relationship front.
 
