--- a/src/markdown/english/7. Environment.md
+++ b/src/markdown/english/7. Environment.md
@@ -4,7 +4,7 @@ A human being becomes his environment. It is critical to savagely and surgically
 
 Breaking addiction requires a new lifestyle. People struggle with breaking addiction because you have to break the physical addiction, and you also have to change your lifestyle. You have to switch to a lifestyle where you can be happy without that substance.
 
-If there is a gaping hole in your life where PMO was, then how do you not expect to fill it? If you still crave pleasure and feeling, then you will just fill that hole with another destructive activity. And then what progress is made? One must change lifestyle and perspective for this change.
+If there is a hole in your life where PMO was, then how do you not expect to fill it? If you still crave pleasure and feeling, then you will just fill that hole with another destructive activity. And then what progress is made? One must change lifestyle and perspective for this change.
 
 Whenever there is a lack of understanding of environment there must be conflict. Environment gives birth to conflict, and so long as we do not understand the environment, conditions, surroundings, and are merely seeking substitutions for these conditions, we are evading one conflict and meeting another.
 
@@ -38,11 +38,11 @@ Counting days is like trying to do things "one step at a time". But the reality 
 
 ## The Degeneration of Contemporary Sexual Dynamics
 
-Over the following years following this book being written, the hypersexualization of society will increase drastically.
+Over the following years following this book being written, the hypersexualization of society will likely increase drastically.
 
 Degeneracy will become more widespread, as healthy gender roles fall apart. These destroyed dynamics will affect the next generation, who will pay the price.
 
-The human will become obsessed with identity, and delusion of reality will become normal.
+The human will become obsessed with identity, and delusion of reality will become the norm.
 
 Men will become incredibly weak and feminine due to the constant stimulus and hypersexualization (this also means those who set themselves apart will be very powerful).
 
@@ -52,16 +52,8 @@ This will likely bring gender dynamics and modern men to a breaking point. It wi
 
 Through all of these environmental factors, be a beacon of light for those that are neck deep in hypersexualization. Those who harness their sexual energy will be incredibly powerful as these societal changes happen.
 
-## The Potential of Nootropics (Extra Section)
+## The Potential of Nootropics (Extra)
 
-Nootropics (potent supplements) have a very large potential for speeding up the dopaminergic recovery from porn use, and other addictive activities. While they should not be depended on, and are not necessary, for those that want to utilize them, they can be effective. With time, the research on nootropics will change, and more effective solutions will come out. However, in the current year (2023), the following are the most effective nootropics (in order) for dopaminergic (and related) recovery.
+Nootropics (potent supplements) have a large potential for speeding up the dopaminergic recovery from porn use, and other addictive activities. While they should not be depended on, and are not necessary, for those that want to utilize them, they can be effective. With time, the research on nootropics will change, and more effective solutions will come out.
 
-1. NACET (50-100mg/day) or NAC (1g/day)
-2. Bromantane (Intranasal 18mg/day)
-3. ALCAR (0.5g/day)
-4. Agmatine Sulfate (750mg 2x/day)
-5. Cortexin (Intranasal 1-2mg/day for 3-4 weeks)
-
-These are the most effective through my thorough research. Each has been studied and verified for its safety and effectiveness. These should not be relied upon for recovery, but they can help speed it up. You still need to understand the problem at hand to find freedom.
-
-It is easy to waste money on nootropics and supplements, but if you want to purchase anything, these are your best bet. Just wanted to add this here, for those that would benefit from these things. I have heard some people call this "cheating" recovery or something, but in reality, porn addiction is completely artificial and man-made. It is smart to use the opportunities your environment makes available to you.
+For continually updated info on nootropics, visit <a href="burgeonbook.org/nootropics">burgeonbook.org/nootropics</a>
