--- a/src/markdown/english/9. Understandings.md
+++ b/src/markdown/english/9. Understandings.md
@@ -1,16 +1,14 @@
-Questions on questions
+Before you can fully understand what it means to choose, you have to know how to decline. Most of our inefficiencies come from what we *do* rather than what we *don't do*. 
 
-Before you can fully understand what it means to choose, you have to know how to decline. ((Be decisive))
+**You are worthy of freedom.**
 
-((you are worthy of freedom))
-
-Freedom is not avoidance of what you don't like. Freedom is having clarity - and you are worthy of having this freedom. In fact, nobody isn't.
+Freedom is not avoidance of what you don't like. Freedom is instead, having clarity - and you are worthy of having this freedom. In fact, nobody isn't worthy of this. We have been brought up, by family, or influences, to believe we are not worthy of freedom. That we do not deserve it. However, if you do not deserve it, who does? The reality is, 
 
 ## Night Emissions
 
-Night emissions, commonly known as "wet dreams" are a natural occurance to get rid of older seminal fluid. They are dreams of a sexual nature that are often nonsensical, created by the subconscious to encourage release. This is not a "relapse", even if you feel slightly more groggy in the morning.
+Another thing you may notice is you may start to have wet dreams. For those who do not know, they are basically dreams (often nonsensical) of a sexual nature, that naturally occur when not involved in sexual activites. They exist to clear your body out of dead sperm, to increase your fertility. The part about these dreams people find annoying however, is that the dreams they have bring back emotions that they used to have when they were in the trap.
 
-It is wise not to view these night emissions negatively or positively. They are just a minor inconvenience that occurs naturally to keep your body in check. It is a sign that you have a high fertility and you have a healthy endocrine system. Don't look forward to these dreams, because they can become a substitution. However, there is no reason to fear these dreams either. 
+The thing is, you should not have a negative outlook on these wet dreams. Previously, you were lowering your fertility rate through self-destruction; wet dreams are just a result of natural hormone activity. You should not build up a negative view on these dreams, and you should not look forward for them either (as it just acts as a substitute). Instead, when you have these dreams, understand them to be neutral. If you do not like the dream, you have the freedom within it to change what is going on (this might be on the edge of lucid dreaming).
 
 ## Boredom
 
@@ -24,4 +22,20 @@ And when one is bored it is the birth of creativity - the birth of change. In ti
 
 In substitution there is no understanding. If you look closely you will see that substitution is nothing but a search for comfort and security and escape; not a search for understanding, not a search for truth, but rather a search for an evasion.
 
-In subsitution there is a lack of understanding - or at least in the sense that you believe PMO needs replacing in some form.
+In subsitution there is a lack of understanding - or at least in the sense that you believe PMO needs replacing in some form. This subsitution can happen without notice too - if one tries to replace the instant bodily pleasure porn provides with things such as meaningful work, or productivity, then it will not compare dopamine-wise. The key is that these things should not be a direct replacements, but rather a use of newfound energy.
+
+## Reminders
+
+One may feel inclined to fear reminders of hypersexualization. However, your frame of mind completely dictates whether reminders have any affect on you. You want to minimize hypersexualization from your environment - but you also don't want to run from it. Because that is escape, and escape infers lack of understanding.
+
+For things like tiktok, instagram, forum boards, discord, etc, it should be highly considered to restrict or remove these social medias from our life. If a service's algorithm uses lewd content as a feature to get watchers stuck in a cycle (no matter the age) then it is a toxic platform.
+
+## Questions
+
+If you are curious about how long it will take for your dopamine system to heal, and if you consciously wait for "effects" you will either increase anticipation or anxiety. Do not bother with this worry and questioning.
+
+The immediate, acute "benefit" is the weight off of your shoulders.
+
+And this freedom can be found, in the present, not in the past or the future. Freedom is found in the present moment.
+
+**Clarity is not seeing clearly, but realizing you are looking through fog.**
