--- a/src/markdown/english/6. Neurology.md
+++ b/src/markdown/english/6. Neurology.md
@@ -1,4 +1,4 @@
-Porn is not a disease, at least in a personal sense. Porn is voluntary behavior.
+Porn is not a disease in a personal sense. Porn is voluntary behavior.
 
 You may push back against this statement, however, the mind works with benefits/negatives. You will only use porn if you see some benefit to it, and only if it is the most attractive path at one time.
 
@@ -8,7 +8,7 @@ The thing with negative habits and negative patterns is that you cannot just pic
 
 People crave image and they crave feelings. Craving image is the desire to be loved, or the desire to be superior. Craving feeling is the desire for pleasure, or the desire to take unhealthy risks. These things are the main roots of negative habits and patterns in people.
 
-<div style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;" title="Source: Heroin Hive (book)"><img alt="Image of endorphin structure" src="https://burgeon-alpha.vercel.app/md_images/neurosis.png" height="450px"></div>
+<div style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;" title="Source: Heroin Hive (book)"><img alt="Neurosis" src="https://burgeonbook.org/md_images/neurosis.png" style="max-width:100%; max-height:450px"></div>
 
 To Grow:
 
@@ -21,7 +21,7 @@ These things are the building blocks of the mind: What society, what people, bas
 
 A human will normally crave, and chase for their entire life. They will build an image of perfection, of a possible utopia, where everything would be fine. All they need is to get what they have wanted. However, everything you have ever desired is right here, in the present moment. Peace is not in the future. However, chasing pleasure, and craving these things, distracts one from peace.
 
-<div style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;" title="Source: Heroin Hive (book)"><img alt="Image of endorphin structure" src="https://burgeon-alpha.vercel.app/md_images/void.png" height="230px"></div>
+<div style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;" title="Source: Heroin Hive (book)"><img alt="Void" src="https://burgeonbook.org/md_images/void.png" height="230px"></div>
 
 Craving avoids one from asking important questions. It consumes time, and it fills the mind. Yet, the reality is that if these people who crave stopped craving, they would have to face the fact that they have nothing else of substance in their life. Due to this chasing, they have made no meaningful action. And any meaningful action they may have made has been forgotten and lost to time.
 
@@ -51,11 +51,13 @@ One thing you may do, after finding freedom, is fear losing this freedom. You ca
 
 Habits are everything—everything we are. We are trained in habits from when we are children, including potty training, when to cry and when not to, and how to smile and when not to. These things become habits—behaviors we learn and integrate into ourselves. 
 
+Many of our flawed beliefs and delusions are fundemental, created through childhood, influenced by our parents and people around us. If we do not make ourselves aware to these influences on our ideas, we will be a slave to the environment. These ideas could be something like: (Interacting with people = yelled at, therefore I will not interact with people) or (Nothing I do is good enough, so I won't do anything) etc.
+
 When we’re older, we’re a collection of thousands of habits constantly running subconsciously. We have a little bit of extra brainpower in our neocortex for solving new problems. You become your habits.
 
 However, you can change these habits and the way your mind views the world, by increasing your neuroplasticity. This takes the humility to change and to question the very things such as your ego, your current beliefs, and life direction.
 
-"You have to take a second to sit down, to thoroughly observe your patterns. Do you move when you don't want to move? Do you get angry when you don't want to get angry? You have to fix these things about yourself, you have to give a fuck about yourself and that makes life so much better." - Jahsey.
+"You have to take a second to sit down, to thoroughly observe your patterns. Do you move when you don't want to move? Do you get angry when you don't want to get angry? You have to fix these things about yourself, you have to give a fuck about yourself and that makes life so much better." -Jahsey.
 
 When we make a conscious effort to change, these pathways can change. But it requires a lot of humility and it requires one to lower their ego.
 
