--- a/src/markdown/english/8. Transmutation.md
+++ b/src/markdown/english/8. Transmutation.md
@@ -6,9 +6,9 @@ But once your survival needs are met, then what's left is the biggest primitive 
 
 Instead of being in this lethargic state, where your body acts like it has achieved what it needs in life, you can create the complete opposite state by retaining your semen, and in doing so, retaining your sexual energy. This is called transmutation.
 
-<div style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;"><img alt="Drawing of a person with an aura (not found)" src="https://burgeon-alpha.vercel.app/md_images/field_aura.png" height="250px" class="mdimg"></div>
+<div style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;"><img alt="Drawing of a person with an aura (not found)" src="https://burgeonbook.org/md_images/field_aura.png" height="250px" class="mdimg"></div>
 
-Transmutation is the art of directly transferring the kept sexual energy (from semen retention) into productive expenditures which encourage growth. It may seem weird, but it has been practiced in professional boxing for hundreds of years.
+Transmutation is the art of directly transferring the kept sexual energy (from semen retention) into productive expenditures which encourage growth. It may seem weird, but it has been practiced in professional boxing for hundreds of years. Transmutation is not a response to an "urge" but rather a constant process.
 
 You may think it is as simple as not releasing semen. However, retaining the energy is not enough. Learn to transmute it and convert it into success.
 
@@ -18,7 +18,7 @@ Sexual energy is such a hurricane of force that it needs to find an outlet. It's
 
 Also just a quick note, you may feel a little more on edge (angry) due to different changes in your body's chemistry when doing semen retention. Keep your composure, as anger is its own punishment, as an angry person trying to push your head below water is drowning at the same time.
 
-## Aura / Life Force
+## Aura / "Life Force"
 
 When semen retention is practiced (without still craving), something happens where the person gains a sort of "Aura" around them which attracts other people towards them. Some people link this to spiritual means, some link it to bodily changes, pheromones, or how you carry yourself. However, this effect of a general rise in attractiveness is not a one-off.
 
@@ -34,7 +34,7 @@ There are several outlets for sexual transmutation. These are either physical or
 
 Transmutation does not have a how-to guide. How-tos do not work except for extreme basics. You kind of just get a feel for it, when you notice it. And when you do, you realize what you were missing this whole time.
 
-<div style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;"><img alt="Image of a person with energy around them (not found)" src="https://burgeon-alpha.vercel.app/md_images/circle_aura.png" height="250px" class="mdimg"></div>
+<div style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;"><img alt="Image of a person with energy around them (not found)" src="https://burgeonbook.org/md_images/circle_aura.png" height="250px" class="mdimg"></div>
 
 ### Physical
 
@@ -44,7 +44,7 @@ I try to do at least some kind of exercise every morning, first thing in the mor
 
 Regular exercise also increases the health of your dopamine receptors (D2/D3).
 
-### Mental Silence
+### Meditation
 
 The second method of transmutation is meditation. This is one of the most important transmutative processes but I think it's often easier and better to meditate after you've worked out. I've just found it to be true that once I've had a workout and I've got oxygen running through my brain, when I meditate I go much deeper into that meditation; and it's almost like this deep lost trance or this stepping into the silence, a true void and when I emerge out of it I have all these insights and a deeper understanding of how I should conduct myself to bring about results and joy in my life.
 
@@ -56,8 +56,7 @@ Meditation also supports positive dopamine production significantly.
 
 Transmutation effort number three is to do deep work. Deep work is a term that was coined by Cal Newport who is a professor at MIT in computer science and it basically means uninterrupted study.
 
-It's the kind of study where you don't do anything else for a period of time and you don't take any breaks from that subject matter that you're studying or that endeavor that you're working towards
-and it's a very hard thing to do in the modern world because we're addicted to our technology, and we're addicted to these quick bursts of dopamine through social media or other dopamine sinks.
+It's the kind of study where you don't do anything else for a period of time and you don't take any breaks from that subject matter that you're studying or that endeavor that you're working towards and it's a very hard thing to do in the modern world because we're addicted to our technology, and we're addicted to these quick bursts of dopamine through social media or other dopamine sinks.
 
 Your brain consumes a lot of your energy when you study hard; but that's an amazing transmutative practice, and an incredibly productive one, because the more you learn, the more you will create, earn, and discover. To make an original contribution, you have to be irrationally obsessed with something - through creativity and obsession towards a goal you can create what nobody has ever imagined. However, you do not want your obsession to outpace you - use the determined focus like a tool.
 
@@ -78,7 +77,7 @@ You'll find that you're so much weightier, you're so much more playful, and at t
 
 ### Creativity & Expression
 
-Transmutation Method Number 6 is having a creative output, either through music, art, painting, poetry, filmmaking, writing, anything creative.
+Transmutation method number 6 is having a creative output, either through music, art, painting, poetry, filmmaking, writing, anything creative.
 
 You will find that when you capture your sexual energy, you can have an incredible creative output. This can be really helpful on the journey to create things that you truly treasure. Expression is also a way to recover from things you do not yet understand; turning hard-to-read thoughts into forms of art is an effective process of recovery.
 
@@ -91,6 +90,8 @@ It is best to build new actions or habits around simple and accessible things su
 Making what you want to do the easiest option will lead you to do it, and if what you want to do is not currently the easiest option, make it so by changing your immediate environment, and better yet, understanding it. It is true some things will always be difficult, but in those cases, staying true to your identity and greater purpose should be the reason to do these things.
 
 Scott Adams famously said, “Set up systems, not goals.” Use your judgment to figure out what kinds of environments you can thrive in, and then create an environment around you so you’re statistically likely to succeed.
+
+Some good advice is to find three hobbies: One that makes you money, one that keeps you fit, and one that makes you creative/helps expression.
 
 ## Energy Sinks
 
@@ -116,4 +117,4 @@ If you do not spend the energy you receive you will likely waste it via masturba
 
 If you masturbate or have sex too often it will negatively impact your body and energy levels. Instead of wasting your energy, look for the value within sexual energy, and it can be transmuted into things you find meaningful - this is how you can propel and find movement in your life.
 
-<div style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;"><img alt="Diagram explaining essentialism and direction of energy (not found)" src="https://burgeon-alpha.vercel.app/md_images/essentialism.png" height="250px" class="mdimg"></div>
+<div style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;"><img alt="Diagram explaining essentialism and direction of energy (not found)" src="https://burgeonbook.org/md_images/essentialism.png" height="250px" class="mdimg"></div>
